--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "food",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "gulp",
@@ -27,5 +26,14 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-stream": "^5.2.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dimichkyiv/Food-2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dimichkyiv/Food-2/issues"
+  },
+  "homepage": "https://github.com/dimichkyiv/Food-2#readme",
+  "description": ""
 }
